--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Systems Tag About</title>
-		<link rel="icon" href="img/St logo for Stellar.png">
+		<link rel="icon" href="images/St logo for Stellar.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/about.css">
@@ -11,13 +11,13 @@
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	</head>
 	<body class="is-preload" style="direction: ltr;">
-		<nav class="header" id="alt">
+		<nav class="header">
 			<input type="checkbox" id="check">
 			<label for="check" class="checkbtn">
 				<i class="fas fa-bars"></i>
 			</label>
 			<div class="logoimg">
-				<img src="images/St logo for Stellar.png" alt="">
+				<img src="images/St logo for Stellar.png" alt="Header Logo">
 			</div>
 			<label class="logo">Systems <span style="color: #15b29f;">Tag</span></label>
 			<ul>
@@ -51,11 +51,11 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium left" id="first">
-								<div class="content span-6 lDir">
-									<h2 class="major" style="color: rgb(66, 66, 66); margin-right: 10px;" data-lang-ar="ما نقوم به" data-lang-en="What We Do">ما نقوم به</h2>
-									<p style="color: rgb(66, 66, 66); margin-right: 10px;" data-lang-ar="يوفر تطبيقنا تواصلاً سلسًا وآمنًا وسهل الاستخدام مع الرسائل الفورية والخصوصية المعززة والدعم باللغتين العربية والإنجليزية. كما يسهل محادثات العملاء السلسة والتعاون بين الفريق من خلال الردود السريعة والميزات المحملة مثل مشاركة الوسائط والدردشات الجماعية. تم تصميمه للتفاعل السهل، ويضمن اتصالاً سلسًا عبر جميع الأجهزة" data-lang-en="Our app offers seamless, secure, and user-friendly communication with real-time messaging, enhanced privacy, and support for both Arabic and English. It facilitates smooth client conversations and team collaboration with quick responses and loaded features like media sharing and group chats. Designed for effortless interaction, it ensures smooth connectivity across all devices.">يوفر تطبيقنا تواصلاً سلسًا وآمنًا وسهل الاستخدام مع الرسائل الفورية والخصوصية المعززة والدعم باللغتين العربية والإنجليزية. كما يسهل محادثات العملاء السلسة والتعاون بين الفريق من خلال الردود السريعة والميزات المحملة مثل مشاركة الوسائط والدردشات الجماعية. تم تصميمه للتفاعل السهل، ويضمن اتصالاً سلسًا عبر جميع الأجهزة</p>
+								<div class="content span-6 gry-txt lDir">
+									<h2 class="major" style="margin-right: 10px;" data-lang-ar="ما نقوم به" data-lang-en="What We Do">ما نقوم به</h2>
+									<p style="margin-right: 10px;" data-lang-ar="يوفر تطبيقنا تواصلاً سلسًا وآمنًا وسهل الاستخدام مع الرسائل الفورية والخصوصية المعززة والدعم باللغتين العربية والإنجليزية. كما يسهل محادثات العملاء السلسة والتعاون بين الفريق من خلال الردود السريعة والميزات المحملة مثل مشاركة الوسائط والدردشات الجماعية. تم تصميمه للتفاعل السهل، ويضمن اتصالاً سلسًا عبر جميع الأجهزة" data-lang-en="Our app offers seamless, secure, and user-friendly communication with real-time messaging, enhanced privacy, and support for both Arabic and English. It facilitates smooth client conversations and team collaboration with quick responses and loaded features like media sharing and group chats. Designed for effortless interaction, it ensures smooth connectivity across all devices.">يوفر تطبيقنا تواصلاً سلسًا وآمنًا وسهل الاستخدام مع الرسائل الفورية والخصوصية المعززة والدعم باللغتين العربية والإنجليزية. كما يسهل محادثات العملاء السلسة والتعاون بين الفريق من خلال الردود السريعة والميزات المحملة مثل مشاركة الوسائط والدردشات الجماعية. تم تصميمه للتفاعل السهل، ويضمن اتصالاً سلسًا عبر جميع الأجهزة</p>
 								</div>
-								<div class="image tinted" data-position="top">
+								<div class="image tinted useFilter" data-position="top">
 									<img src="images/Mobile chat 3D view copy.png" alt="" />
 								</div>
 							</section>
@@ -80,11 +80,11 @@
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
-								<div class="content span-5 lDir">
-									<h2 class="major" style="color: rgb(66, 66, 66);" data-lang-ar="لماذا تختار تطبيقنا؟" data-lang-en="Why Choose Our App?">لماذا تختار تطبيقنا؟</h2>
-									<p style="color: rgb(66, 66, 66);" data-lang-ar="استمتع بالمزيج المثالي بين السرعة والأمان والبساطة. تم تصميم تطبيقنا لتلبية احتياجاتك في مجال الاتصالات من خلال ميزات متطورة تضمن تفاعلًا سلسًا مع العملاء وتعاونًا بين الفريق ودعمًا شخصيًا لم يسبق له مثيل" data-lang-en="Experience the perfect blend of speed, security, and simplicity. Our app is tailored to meet your communication needs with cutting-edge features, ensuring smooth client interactions, team collaboration, and personalized support like never before.">استمتع بالمزيج المثالي بين السرعة والأمان والبساطة. تم تصميم تطبيقنا لتلبية احتياجاتك في مجال الاتصالات من خلال ميزات متطورة تضمن تفاعلًا سلسًا مع العملاء وتعاونًا بين الفريق ودعمًا شخصيًا لم يسبق له مثيل</p>
+								<div class="content span-5 gry-txt lDir">
+									<h2 class="major" data-lang-ar="لماذا تختار تطبيقنا؟" data-lang-en="Why Choose Our App?">لماذا تختار تطبيقنا؟</h2>
+									<p data-lang-ar="استمتع بالمزيج المثالي بين السرعة والأمان والبساطة. تم تصميم تطبيقنا لتلبية احتياجاتك في مجال الاتصالات من خلال ميزات متطورة تضمن تفاعلًا سلسًا مع العملاء وتعاونًا بين الفريق ودعمًا شخصيًا لم يسبق له مثيل" data-lang-en="Experience the perfect blend of speed, security, and simplicity. Our app is tailored to meet your communication needs with cutting-edge features, ensuring smooth client interactions, team collaboration, and personalized support like never before.">استمتع بالمزيج المثالي بين السرعة والأمان والبساطة. تم تصميم تطبيقنا لتلبية احتياجاتك في مجال الاتصالات من خلال ميزات متطورة تضمن تفاعلًا سلسًا مع العملاء وتعاونًا بين الفريق ودعمًا شخصيًا لم يسبق له مثيل</p>
 								</div>
-								<div class="image tinted" data-position="top right">
+								<div class="image tinted useFilter" data-position="top right">
 									<img src="images/Content guidelines without Txt.png" alt="" />
 								</div>
 							</section>
@@ -119,7 +119,7 @@
 									<p style="margin-bottom: 0;"  data-lang-ar="المملكة العربية السعودية، القصيم، بريدة" data-lang-en="Kingdom of Saudi Arabia, Qassim, Buraidah">المملكة العربية السعودية، القصيم، بريدة<br>AVL Tracking Maps<br>support@trackingmaps.sa,<br>920013711</p>
 									<p style="font-family: 'Belleza', sans-serif; margin-bottom: 0;">AVL Tracking Maps</p>
 									<p style="margin-bottom: 0;">support@trackingmaps.sa</p>
-									<p>920013711</p>
+									<p>+966920031711</p>
 								</div>
 								<div class="inner columns divided" id="aboutContact">
 									<div class="span-3-25">
@@ -139,7 +139,7 @@
 												</div>
 											</div>
 											<ul class="actions lDir">
-												<li><input style="font-weight: 600;" type="submit" value="Send Message" class="button primary"  data-lang-en="Send Message" 
+												<li><input style="font-weight: 600;" type="submit" value="إرسال رسالة" class="button primary"  data-lang-en="Send Message" 
 													data-lang-ar="إرسال رسالة" /></li>
 											</ul>
 										</form>
@@ -148,8 +148,8 @@
 										<ul class="contact-icons color1">
 											<li class="icon brands fa-facebook-f"><a href="#">facebook.com</a></li>
 											<li class="icon brands fa-twitter"><a href="#">twitter.com</a></li>
-											<li class="icon brands fa-linkedin-in"><a href="#">linkedin.com</a></li>
 											<li class="icon brands fa-instagram"><a href="#">instagram.com</a></li>
+											<li class="icon brands fa-linkedin-in"><a href="#">linkedin.com</a></li>
 											<li class="icon brands fa-youtube"><a href="#">youtube.com</a></li>
 										</ul>
 									</div>
@@ -169,7 +169,6 @@
 					</div>
 			</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/main.js"></script>
