--- a/Legal.html
+++ b/Legal.html
@@ -29,7 +29,7 @@
 				<li><a class="font-arabic" id="toggleLang" style="cursor: pointer; border-bottom: none;">English</a></li>
 			</ul>
 		</nav>
-			<div id="wrapper">
+			<div id="wrapper" class="woutHeader">
 
 				<!-- Header -->
 					<header id="header">
