appStore link added

--- a/Legal.html
+++ b/Legal.html
@@ -213,7 +213,7 @@
 								<p data-lang-ar="تطبيقنا متاح على كل من متجر Play ومتجر App Store. انقر على الشعار، وسيُتاح لك التنقل بسهولة" data-lang-en="Our app is available on both the Play Store and App Store. Click the logo, and it will easily navigate you.">تطبيقنا متاح على كل من متجر Play ومتجر App Store. انقر على الشعار، وسيُتاح لك التنقل بسهولة</p>
 								<div class="downloadLogo">
 									<a href="https://play.google.com/store/apps/details?id=com.system_tag.app&hl=en" target="_blank"><img src="img/logo 4 for stweb.png" alt="Download on Play Store"></a>
-									<a href="https://www.apple.com/sa/app-store/" target="_blank"><img src="img/logo 3 for stweb.png" alt="Download on App Store"></a>
+									<a href="https://apps.apple.com/us/app/systems-tag/id6738041260?l=ar" target="_blank"><img src="img/logo 3 for stweb.png" alt="Download on App Store"></a>
 								</div>
 							</article>
 
