--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                 <img class="footer-logo" src="img/Footer logo 2.png" alt="Systems Tag Logo">
                 <div>
                     <a href="https://play.google.com/store/apps/details?id=com.system_tag.app&hl=en" target="_blank"><img src="img/logo 4 for stweb.png" alt="Download on Play Store"></a>
-                    <a href="https://www.apple.com/sa/app-store/" target="_blank"><img src="img/logo 3 for stweb.png" alt="Download on App Store"></a>
+                    <a href="https://apps.apple.com/us/app/systems-tag/id6738041260?l=ar" target="_blank"><img src="img/logo 3 for stweb.png" alt="Download on App Store"></a>
                 </div>
                 <div class="social">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
