--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <label class="logo" style="direction: ltr;"><img src="images/St logo for Stellar.png" alt="Header Logo">Systems <span style="color: #15b29f;">Tag</span></label>
         <ul>
             <li><a href="#" id="home" data-lang-ar="الرئيسية" data-lang-en="Home">الرئيسية</a></li>
-            <li><a href="about.html" data-lang-ar="معلومات عنا" data-lang-en="About">معلومات عنا</a></li>
-            <li><a href="#footer" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
-            <li><a class="font-arabic" id="toggleLang" style="cursor: pointer;">English</a></li>
+            <li><a href="about.html" class="reveal-item" data-lang-ar="معلومات عنا" data-lang-en="About">معلومات عنا</a></li>
+            <li><a href="#footer" class="reveal-item" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
+            <li><a class="font-arabic reveal-item" id="toggleLang" style="cursor: pointer;">English</a></li>
         </ul>
     </nav>
 
