--- a/about.html
+++ b/about.html
@@ -9,25 +9,27 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 		<link href="https://fonts.googleapis.com/css2?family=Belleza&family=Lalezar&family=Lilita+One&family=Marhey:wght@300..700&family=Original+Surfer&family=Pacifico&family=Paytone+One&family=Readex+Pro:wght@160..700&family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+		<script src="https://unpkg.com/scrollreveal"></script>
 	</head>
 	<body class="is-preload" style="direction: ltr;">
-		<nav class="header">
-			<input type="checkbox" id="check">
-			<label for="check" class="checkbtn">
-				<i class="fas fa-bars"></i>
-			</label>
-			<div class="logoimg">
-				<img src="images/St logo for Stellar.png" alt="Header Logo">
-			</div>
-			<label class="logo">Systems <span style="color: #15b29f;">Tag</span></label>
-			<ul>
-				<li><a href="index.html" data-lang-ar="الرئيسية" data-lang-en="Home" style="border-bottom: none;">الرئيسية</a></li>
-				<li><a href="#" data-lang-ar="معلومات عنا" data-lang-en="About" style="border-bottom: none;">معلومات عنا</a></li>
-				<li><a href="#aboutContact" data-lang-ar="اتصل بنا" data-lang-en="Contact" style="border-bottom: none;">اتصل بنا</a></li>
-				<li><a class="font-arabic" id="toggleLang" style="cursor: pointer; border-bottom: none;">English</a></li>
-			</ul>
-		</nav>
-
+		<div class="headerSR">
+			<nav class="header">
+				<input type="checkbox" id="check">
+				<label for="check" class="checkbtn">
+					<i class="fas fa-bars"></i>
+				</label>
+				<div class="logoimg">
+					<img src="images/St logo for Stellar.png" alt="Header Logo">
+				</div>
+				<label class="logo reveal-item">Systems <span style="color: #15b29f;">Tag</span></label>
+				<ul>
+					<li><a href="index.html" class="reveal-item hover-eff" data-lang-ar="الرئيسية" data-lang-en="Home" style="border-bottom: none;">الرئيسية</a></li>
+					<li><a href="#" class="reveal-item hover-eff" data-lang-ar="معلومات عنا" data-lang-en="About" style="border-bottom: none;">معلومات عنا</a></li>
+					<li><a href="#aboutContact" class="reveal-item hover-eff" data-lang-ar="اتصل بنا" data-lang-en="Contact" style="border-bottom: none;">اتصل بنا</a></li>
+					<li><a class="font-arabic reveal-item hover-eff" id="toggleLang" style="cursor: pointer; border-bottom: none;">English</a></li>
+				</ul>
+			</nav>
+		</div>
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
