--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
 				<a href="">Systems <span>Tag</span></a>
 			  </div>
 			  <ul class="links">
-				<li><a href="index.html" class="reveal-item" data-lang-ar="الرئيسية" data-lang-en="Home">الرئيسية</a></li>
-				<li><a href="Legal.html" class="reveal-item" data-lang-ar="قانوني" data-lang-en="Legal">قانوني</a></li>
-				<li><a href="#aboutContact" class="reveal-item" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
-				<li><a class="font-arabic reveal-item" id="toggleLang" style="cursor: pointer;">English</a></li>
+				<li><a href="index.html" data-lang-ar="الرئيسية" data-lang-en="Home">الرئيسية</a></li>
+				<li><a href="Legal.html" data-lang-ar="قانوني" data-lang-en="Legal">قانوني</a></li>
+				<li><a href="#aboutContact" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
+				<li><a class="font-arabic" id="toggleLang" style="cursor: pointer;">English</a></li>
 			  </ul>
 			  <div class="toggle_btn">
 				<i class="line line1"></i>
@@ -34,9 +34,9 @@
 
 			<div class="dropdown_menu">
 				<li><a href="index.html" data-lang-ar="الرئيسية" data-lang-en="Home">الرئيسية</a></li>
-				<li><a href="Legal.html" class="reveal-item" data-lang-ar="قانوني" data-lang-en="Legal">قانوني</a></li>
-				<li><a href="#aboutContact" class="reveal-item" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
-				<li><a class="font-arabic reveal-item" id="toggleLangOne" style="cursor: pointer;">English</a></li>
+				<li><a href="Legal.html" data-lang-ar="قانوني" data-lang-en="Legal">قانوني</a></li>
+				<li><a href="#aboutContact" data-lang-ar="اتصل بنا" data-lang-en="Contact">اتصل بنا</a></li>
+				<li><a class="font-arabic" id="toggleLangOne" style="cursor: pointer;">English</a></li>
 			</div>
 		</header>
 
