--- a/about.html
+++ b/about.html
@@ -154,6 +154,7 @@
 											<ul class="actions lDir">
 												<li><input class="as-button" style="font-weight: 600;" type="submit" value="إرسال رسالة" class="button primary"  data-lang-en="Send Message"
 													data-lang-ar="إرسال رسالة" /></li>
+												<li><input class="as-button" style="font-weight: 600;" type="reset" value="إعادة ضبط" data-lang-ar="إعادة ضبط" data-lang-en="Reset"/></li>
 											</ul>
 										</form>
 									</div>
