--- a/Legal.html
+++ b/Legal.html
@@ -69,7 +69,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
+						<!-- Privacy Policy -->
 							<article id="intro" style="direction: ltr;">
 								<h2 class="major" data-lang-ar="سياسة الخصوصية" data-lang-en="Privacy Policy">سياسة الخصوصية</h2>
 								<span style="font-size: xx-large;"> Introduction </span> </br>
@@ -176,7 +176,7 @@
 								Last Updated at “2024-11-13”
 							</article>
 
-						<!-- Work -->
+						<!-- Terms & Conditions -->
 							<article id="work" style="direction: ltr;">
 								<h2 class="major" data-lang-ar="الشروط والأحكام" data-lang-en="Terms & Conditions">الشروط والأحكام</h2>
 								Welcome to Systems Tag Chat, a SaaS (Software as a Service) platform provided by Tracking Maps (“Systems Tag,” “we,” “us,” or “our”). These Terms and Conditions govern your use of our platform and services. By accessing or using Systems Tag Chat, you agree to comply with and be bound by the following terms and conditions:
